# phenotype-tooling

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  FUNDING.yml  LICENSE  README.md  SECURITY.md  Taskfile.yml  package.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: alert-sync-issues.yml  cargo-audit.yml  cargo-deny.yml  ci.yml  codeql-rust.yml  codeql.yml  doc-links.yml  fr-coverage.yml  pages.yml  quality-gate.yml  release.yml  scorecard.yml  trufflehog.yml
bluebubbles/: README.md  tailscale-acl.json  webhook.py
crates/agent-forecast/: Cargo.toml  README.md
crates/agent-forecast/src/: main.rs
crates/agent-orchestrator/: Cargo.toml  README.md  orchestration.toml.example
crates/agent-orchestrator/src/: lib.rs  main.rs
crates/anthropic-usage-poll/: Cargo.toml  README.md
crates/anthropic-usage-poll/src/: main.rs
crates/audit-privacy/: Cargo.toml
crates/audit-privacy/src/: main.rs
crates/bench-guard/: Cargo.toml
crates/bench-guard/src/: main.rs
crates/commit-msg-check/: Cargo.toml
crates/commit-msg-check/src/: main.rs
crates/doc-link-check/: Cargo.toml
crates/doc-link-check/src/: main.rs
crates/docs-health/: Cargo.toml  README.md
crates/docs-health/src/: main.rs
crates/fr-coverage/: Cargo.toml
crates/fr-coverage/src/: main.rs
crates/fr-trace/: Cargo.toml  README.md
crates/fr-trace/src/: main.rs
crates/fuzz-setup/: .gitignore  Cargo.toml
crates/fuzz-setup/fuzz_targets/: audit_chain_verify.rs  canonical_json.rs  ir_hash_stability.rs  starlark_parse_invariants.rs
crates/fuzz-setup/src/: lib.rs
crates/legacy-scan/: Cargo.toml  README.md
crates/legacy-scan/src/: main.rs
crates/quality-gate/: Cargo.toml  README.md
crates/quality-gate/quality-gate/: Cargo.toml
crates/quality-gate/quality-gate/src/: main.rs
crates/quality-gate/src/: main.rs
crates/release-cut/: Cargo.toml  README.md
crates/release-cut/src/: executor.rs  main.rs  planner.rs  version_bump.rs
crates/sbom-gen/: Cargo.toml
crates/sbom-gen/docs/security/: sbom.json
crates/sbom-gen/src/: main.rs
crates/temporal-grounding/: Cargo.toml  README.md
crates/temporal-grounding/src/: lib.rs
docs/: adoption.md  hwledger-kokoro-migration.md  index.md  tools.md
docs/.vitepress/: config.mts
docs/sessions/20260429-sladge-badge-rollout/: 00_SESSION_OVERVIEW.md  01_RESEARCH.md  02_SPECIFICATIONS.md  03_DAG_WBS.md  04_IMPLEMENTATION_STRATEGY.md  05_KNOWN_ISSUES.md  06_TESTING_STRATEGY.md
hooks/: README.md  settings.local.json
scripts/: adopt-tooling.sh
worklogs/: GOVERNANCE.md  README.md  RESEARCH.md
