[workspace]
resolver = "2"
members = [
    "crates/docs-health",
    "crates/fr-trace",
    "crates/quality-gate",
    "crates/legacy-scan",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/KooshaPari/phenotype-tooling"
authors = ["Phenotype Contributors"]

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "fs"] }
walkdir = "2.5"

[profile.release]
lto = "thin"
codegen-units = 1
