[workspace]
resolver = "2"
members = [
    "crates/docs-health",
    "crates/fr-trace",
    "crates/quality-gate",
    "crates/legacy-scan",
    "crates/agent-orchestrator",
    "crates/audit-privacy",
    "crates/bench-guard",
    "crates/commit-msg-check",
    "crates/doc-link-check",
    "crates/fr-coverage",
    "crates/release-cut",
    "crates/sbom-gen",
    "crates/fuzz-setup",
    "crates/anthropic-usage-poll",
    "crates/agent-forecast",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/KooshaPari/phenotype-tooling"
authors = ["Phenotype Contributors"]
rust-version = "1.75"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.39", features = ["rt-multi-thread", "macros", "fs"] }
walkdir = "2.5"
thiserror = "2.0"
reqwest = { version = "0.13", features = ["blocking", "json"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = "thin"
codegen-units = 1
