[package]
name = "agent-orchestrator"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
clap = { version = "4.5",features=["derive", "env"] }
serde = { version = "1.0",features=["derive"] }
serde_json = "1.0"
toml = "1.1"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3",features=["env-filter"] }
chrono = { version = "0.4",features=["serde"] }
uuid = { version = "1.11",features=["v4", "serde"] }
regex = "1.10"
walkdir = "2.4"
glob = "0.3"

[dev-dependencies]
