[package]
name = "fr-trace"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "FR -> test traceability scanner (AgilePlus FR-* convention)"

[[bin]]
name = "fr-trace"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
walkdir = { workspace = true }
