[package]
name = "quality-gate"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Aggregates cargo/clippy/test/fmt/bench pass-fail into a single gate"

[[bin]]
name = "quality-gate"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
