[package]
name = "release-cut"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }

[[bin]]
name = "release-cut"
path = "src/main.rs"

[dependencies]
clap = { workspace = true,features=["derive"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true,features=["derive"] }
serde_json = { workspace = true }
toml = { version = "1.1" }
chrono = { workspace = true,features=["serde"] }
reqwest = { workspace = true,features=["blocking"] }
semver = "1.0"
regex = "1.10"
walkdir = "2.4"


[dev-dependencies]
tokio = { workspace = true,features=["macros", "rt"] }
tempfile = "3.8"
