[package]
name = "sbom-gen"
version = "0.1.0"
edition = "2021"
publish = false
description = "SBOM (Software Bill of Materials) generator for FocalPoint workspace"

[[bin]]
name = "sbom-gen"
path = "src/main.rs"

[dependencies]
cargo_metadata = "0.23"
serde_json = "1.0"
anyhow = "1.0"
chrono = "0.4"
