[package]
name = "temporal-grounding"
description = "Temporal grounding utilities for Claude Code agent sessions"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[lib]
name = "temporal_grounding"
path = "src/lib.rs"

[[bin]]
name = "agent-start-stamp"
path = "src/bin/start_stamp.rs"

[[bin]]
name = "agent-elapsed"
path = "src/bin/elapsed.rs"

[[bin]]
name = "now-iso"
path = "src/bin/now_iso.rs"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
